--- a/proj_duanyou/build.gradle
+++ b/proj_duanyou/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.2.0'
     //player
     api 'cn.jzvd:jiaozivideoplayer:6.2.9'
+    //圆角图片
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
 
 }
