下拉刷新加载更多  完善用户操作接口逻辑

--- a/proj_duanyou/build.gradle
+++ b/proj_duanyou/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     api 'cn.jzvd:jiaozivideoplayer:6.2.9'
     //圆角图片
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    //刷新控件
+    implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
 
 
 }
