--- a/proj_duanyou/src/main/AndroidManifest.xml
+++ b/proj_duanyou/src/main/AndroidManifest.xml
@@ -24,12 +24,13 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.DuanziDetailsActivity"
-            android:windowSoftInputMode="adjustPan" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
             android:name=".activity.LoginActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.RegisterActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
