--- a/proj_duanyou/build.gradle
+++ b/proj_duanyou/build.gradle
@@ -29,6 +29,7 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     api project(':esbsdk')
+
     api 'com.android.support:appcompat-v7:26.1.0'
     api 'com.android.support:support-v4:26.1.0'
     api 'com.android.support:design:26.1.0'
@@ -70,6 +71,9 @@ dependencies {
     implementation 'com.makeramen:roundedimageview:2.3.0'
     //刷新控件
     implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
-
+    //压缩图片框架
+    compile 'com.jaywei:compresstool:1.2.0'
+    //图片加载框架
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 
 }
