--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,64 @@ allprojects {
     }
 }
 
+
+subprojects {
+    afterEvaluate { Project project ->
+        ext.pluginContainer = project.getPlugins()
+        def hasAppPlugin = ext.pluginContainer.hasPlugin("com.android.application")
+        def hasLibPlugin = ext.pluginContainer.hasPlugin("com.android.library")
+        if (hasAppPlugin || hasLibPlugin) {
+            android {
+                compileSdkVersion 26 as int
+                buildToolsVersion '27.0.3'
+//                aaptOptions {
+//                    cruncherEnabled = false
+//                    useNewCruncher = false
+//                }
+
+
+                buildTypes {
+                    release {
+                        debuggable false
+                        minifyEnabled false //实时构建库项目时若启用混淆，APP模块引用会造成部分方法找不到
+                    }
+                    debug {
+                        debuggable true
+                        minifyEnabled false
+                    }
+                }
+//                aaptOptions{
+//                    cruncherEnabled false
+//                    useNewCruncher false
+//                }
+                lintOptions {
+                    abortOnError false
+                }
+
+                packagingOptions {
+                    exclude 'META-INF/DEPENDENCIES.txt'
+                    exclude 'META-INF/LICENSE.txt'
+                    exclude 'META-INF/NOTICE.txt'
+                    exclude 'META-INF/NOTICE'
+                    exclude 'META-INF/LICENSE'
+                    exclude 'META-INF/DEPENDENCIES'
+                    exclude 'META-INF/notice.txt'
+                    exclude 'META-INF/license.txt'
+                    exclude 'META-INF/dependencies.txt'
+                    exclude 'META-INF/LGPL2.1'
+                    exclude 'META-INF/ASL2.0'
+                }
+
+            }
+
+        }
+
+
+    }
+
+}
+
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
