--- a/proj_duanyou/build.gradle
+++ b/proj_duanyou/build.gradle
@@ -5,7 +5,6 @@ android {
     compileSdkVersion 26
 
 
-
     defaultConfig {
         applicationId "com.duanyou.lavimao.proj_duanyou"
         minSdkVersion 19
@@ -29,6 +28,7 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     api project(':esbsdk')
+    api project(':android-pickers')
 
     api 'com.android.support:appcompat-v7:26.1.0'
     api 'com.android.support:support-v4:26.1.0'
