--- a/proj_duanyou/build.gradle
+++ b/proj_duanyou/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     api project(':esbsdk')
     api project(':android-pickers')
 
+
     api 'com.android.support:appcompat-v7:26.1.0'
     api 'com.android.support:support-v4:26.1.0'
     api 'com.android.support:design:26.1.0'
@@ -75,5 +76,9 @@ dependencies {
     compile 'com.jaywei:compresstool:1.2.0'
     //图片加载框架
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    //友盟统计
+//    compile 'com.umeng.sdk:common:latest.integration'
+//    compile 'com.umeng.sdk:analytics:latest.integration'
+
 
 }
