--- a/proj_duanyou/build.gradle
+++ b/proj_duanyou/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-
+        sourceSets.main.jniLibs.srcDirs = ['src/main/libs']
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
@@ -119,5 +119,15 @@ dependencies {
     //    compile 'com.umeng.sdk:common:latest.integration'
 
     //    compile 'com.umeng.sdk:analytics:latest.integration'
-//    implementation files('libs/alicloud-android-utils-1.0.3.jar')
+
+    //    implementation files('libs/alicloud-android-utils-1.0.3.jar')
+    implementation files('libs/SocialSDK_QQ_Simplify.jar')
+    implementation files('libs/SocialSDK_Sina_Simplify.jar')
+    implementation files('libs/SocialSDK_WeChat_Simplify.jar')
+    implementation files('libs/umeng_social_api.jar')
+    implementation files('libs/umeng_social_net.jar')
+    implementation files('libs/umeng_social_tool.jar')
+    implementation files('libs/umeng-analytics-7.5.1.jar')
+    implementation files('libs/umeng-common-1.5.1.jar')
+    implementation files('libs/umeng-debug-1.0.0.jar')
 }
