--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven {
+            url "https://jitpack.io"
+        }
 
 //            maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
 
