--- a/proj_duanyou/build.gradle
+++ b/proj_duanyou/build.gradle
@@ -113,6 +113,7 @@ dependencies {
 
     //图片加载框架
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.quentin7b:android-location-tracker:3.2'
 
     //友盟统计
 
