--- a/proj_duanyou/src/main/AndroidManifest.xml
+++ b/proj_duanyou/src/main/AndroidManifest.xml
@@ -5,6 +5,12 @@
     <uses-sdk android:minSdkVersion="8" />
     <!-- 读写外部存储器 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.LOCATION_HARDWARE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+
+
     <!-- 允许程序设置内置sd卡的写权限 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <!-- 使用网络功能所需权限 -->
@@ -76,6 +82,10 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.CodeActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.NearbyActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="portrait" />
         <activity
