--- a/proj_duanyou/src/main/AndroidManifest.xml
+++ b/proj_duanyou/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
 
-
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <!-- 允许程序设置内置sd卡的写权限 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <!-- 使用网络功能所需权限 -->
