忽略文件修改

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':proj_duanyou', 'esbsdk', 'android-pickers', ':wx',':OneSDK'
+include ':proj_duanyou', 'esbsdk', 'android-pickers', ':OneSDK'
