--- a/proj_duanyou/build.gradle
+++ b/proj_duanyou/build.gradle
@@ -43,11 +43,20 @@ android {
         }
     }
 
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
+
 }
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
+
+
     api project(':esbsdk')
+
     api project(':android-pickers')
     api 'com.android.support:appcompat-v7:26.1.0'
     api 'com.android.support:support-v4:26.1.0'
@@ -132,4 +141,5 @@ dependencies {
     implementation files('libs/umeng-common-1.5.1.jar')
     implementation files('libs/umeng-debug-1.0.0.jar')
     implementation project(':OneSDK')
+
 }
