评论级bug修复  未完

--- a/proj_duanyou/src/main/AndroidManifest.xml
+++ b/proj_duanyou/src/main/AndroidManifest.xml
@@ -232,6 +232,7 @@
         <activity
             android:name=".activity.GroupMessageActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".activity.ReplyActivity"></activity>
     </application>
 
 </manifest>
