完善评论回复逻辑  新增上传段子预览  部分bug修复

--- a/proj_duanyou/src/main/AndroidManifest.xml
+++ b/proj_duanyou/src/main/AndroidManifest.xml
@@ -240,7 +240,8 @@
         <activity
             android:name=".activity.GroupMessageActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activity.ReplyActivity"></activity>
+        <activity android:name=".activity.ReplyActivity" />
+        <activity android:name=".activity.PreviewActivity"></activity>
     </application>
 
 </manifest>
