--- a/proj_duanyou/build.gradle
+++ b/proj_duanyou/build.gradle
@@ -118,6 +118,8 @@ dependencies {
     //压缩图片框架
     compile 'com.jaywei:compresstool:1.2.0'
 
+    implementation 'top.zibin:Luban:1.1.5'
+
     //图片加载框架
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.quentin7b:android-location-tracker:3.2'
