--- a/esbsdk/build.gradle
+++ b/esbsdk/build.gradle
@@ -24,5 +24,5 @@ dependencies {
 
     // https://developer.qiniu.com/kodo/sdk/1236/android#1
     api 'com.qiniu:qiniu-android-sdk:7.3.+'
-
+    implementation 'com.alibaba:fastjson:1.1.67.android'
 }
